Add the connection string in the application.properties file.
fixes #4

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mariadb://localhost:3306/adoptame
+spring.datasource.username=roo
+spring.datasource.password=*****
+#Para que solo valide pero no haga ningún cambio a la bd
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.properties.hibernate.format_sql=true
 
+server.error.include-message=always
